--- a/app/View/index.html
+++ b/app/View/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
   <h1>Testing page rendering...</h1>
-  <p>Can replace variables: '{{ $test }}'</p>
-  <!-- Have it do foreach on something here... -->
+  <p>Can replace variables: '{{ test }}'</p>
+  <p>Can render for loops: </p>
+  <br />
+  {% for event in events %}
+    <p>{{ event.name }}</p>
+  {% endfor %}
 
-  <!-- Make it able to have other sub-Views -->
+  {% extends "footer.html" %}
 </body>
 </html>
