--- a/app/View/index.html.twig
+++ b/app/View/index.html.twig
@@ -7,13 +7,13 @@
 </head>
 <body>
   <h1>Testing page rendering...</h1>
-  <p>Can replace variables: '{{ test }}'</p>
+
+  <p>Name: {{name}}</p>
+  <!-- <p>Can replace variables: '{{ test }}'</p>
   <p>Can render for loops: </p>
   <br />
   {% for event in events %}
     <p>{{ event.name }}</p>
-  {% endfor %}
-
-  {% extends "footer.html" %}
+  {% endfor %} -->
 </body>
 </html>
