--- a/app/View/event.html.twig
+++ b/app/View/event.html.twig
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event</title>
-</head>
-<body>
+{% extends "base.html.twig" %}
+
+{% block title %}Events{% endblock %}
+
+{% block content %}
   <h1>{{ event.name }}</h1>
   <p>Event id: {{ event.id }}</p>
-</body>
-</html>
+{% endblock %}
