image_id now properly set in database when uploaded

--- a/app/View/event.html.twig
+++ b/app/View/event.html.twig
@@ -5,4 +5,5 @@
 {% block content %}
   <h1>{{ event.name }}</h1>
   <p>Event id: {{ event.id }}</p>
+  <p>Image Id: {{ event.imageId }}</p>
 {% endblock %}
