--- a/app/View/event.html.twig
+++ b/app/View/event.html.twig
@@ -6,4 +6,5 @@
   <h1>{{ event.name }}</h1>
   <p>Event id: {{ event.id }}</p>
   <p>Image Id: {{ event.imageId }}</p>
+  <img src="{{ image }}" />
 {% endblock %}
