created logout route / button

--- a/app/View/base.html.twig
+++ b/app/View/base.html.twig
@@ -12,6 +12,14 @@
   {% block navigation %}
     <header>
       <p>The header</p>
+
+      <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+        Logout
+      </a>
+
+      <form id="logout-form" method="post" action="/logout" style="display: none;">
+        {# <input type="submit" value="logout"> #}
+      </form>
     </header>
   {% endblock %}
     <main>
