--- a/app/View/base.html
+++ b/app/View/base.html
@@ -13,13 +13,15 @@
     <header>
       <p>The header</p>
 
-      <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
-        Logout
-      </a>
-
-      <form id="logout-form" method="post" action="/logout" style="display: none;">
-        {# <input type="submit" value="logout"> #}
-      </form>
+      
+      {% if loggedIn == true %}
+        <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+          Logout
+        </a>
+        <form id="logout-form" method="post" action="/logout" style="display: none;">
+          {# <input type="submit" value="logout"> #}
+        </form>
+      {% endif %}
     </header>
   {% endblock %}
     <main>
