--- a/app/View/base.html
+++ b/app/View/base.html
@@ -4,7 +4,7 @@
   {% block head %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css"/>
+  <link type="text/css" rel="stylesheet" href="./assets/css/style.css"/>
   <title>{% block title %}{% endblock %}</title>
   {% endblock %}
 </head>
