--- a/app/View/login.html
+++ b/app/View/login.html
@@ -2,7 +2,12 @@
 
 {% block title %}Login{% endblock %}
 
+{% import "components/buttons.html" as button %}
+{% import "components/forms.html" as forms %}
+
 {% block content %}
+  {{ button.primary('testing')}}
+
   <form method="post" accept-charset="UTF-8">
     <h3><label for="email">Email</label></h3>
     <input id="email" type="text" name="email">
@@ -10,12 +15,8 @@
     <h3><label for="password">Password</label></h3>
     <input id="password" type="password" name="password">
   
-    {# <label>
-      <input type="checkbox" name="rememberMe" value="1">
-      Remember me
-    </label> #}
-  
-    <input type="submit" value="Login">
+    <!-- <input type="submit" value="Login"> -->
+    {{ forms.submit('Login') }}
   
     {# {% if errorMessage is defined %}
       <p>{{ errorMessage }}</p>
