--- a/app/View/components/forms.html
+++ b/app/View/components/forms.html
@@ -1,17 +1,19 @@
-{% macro input(name, label, value = null, classes = []) %}
-  <div class="form-group {{ classes.class }}">
-    <label for="{{ name }}"> {{ label }}</label>
-    <input placeholder="{{ value }}" type="{{ name == 'email' ? 'email' : 'text' }}" class="form-control" id="{{ name }}" name="{{ name }}">
+{% macro input(name, label, placeholder = null, type = "text", classes = "") %}
+  <div class="form-group {{ classes }}">
+    {% if label != "" %}
+      <label for="{{ name }}"> {{ label }}</label>
+    {% endif %}
+    <input placeholder="{{ placeholder }}" type="{{ type }}" class="form-control" id="{{ name }}" name="{{ name }}">
   </div>
 {% endmacro %}
 
-{% macro textarea(name, label, value = null, classes = []) %}
-  <div class="form-group {{ classes.class }}">
+{% macro textarea(name, label, value = null, classes = "") %}
+  <div class="form-group {{ classes }}">
     <label for="{{ name }}"> {{ label }}</label>
     <textarea type="text" class="form-control" id="{{ name }}" name="{{ name }}"></textarea>
   </div>
 {% endmacro %}
 
-{% macro submit(label, classes = []) %}
-  <input type="submit" class="btn btn-primary {{ classes.class }}" value="{{label}}">
+{% macro submit(label = "Submit", classes = "") %}
+  <button type="submit" class="btn btn-primary {{ classes }}">{{label}}</button>
 {% endmacro %}
