--- a/app/View/base.html
+++ b/app/View/base.html
@@ -4,33 +4,43 @@
   {% block head %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  
   <link type="text/css" rel="stylesheet" href="./assets/css/style.css"/>
+
   <title>{% block title %}{% endblock %}</title>
   {% endblock %}
 </head>
 <body>
-  {% block navigation %}
-    <header>
-      <p>The header</p>
+  <header>
+    {% block navigation %}
+    <p>The header</p>
 
-      
-      {% if loggedIn == true %}
-        <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
-          Logout
-        </a>
-        <form id="logout-form" method="post" action="/logout" style="display: none;">
-          {# <input type="submit" value="logout"> #}
-        </form>
-      {% endif %}
-    </header>
-  {% endblock %}
-    <main>
-      {% block content %}{% endblock %}
-    </main>
-  {% block footer %}
-    <footer id="footer">
-      &copy; Copyright 2023 by Elwin Jukema.
-    </footer>
-  {% endblock %}
+    
+    {% if loggedIn == true %}
+      <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+        Logout
+      </a>
+      <form id="logout-form" method="post" action="/logout" style="display: none;">
+        {# <input type="submit" value="logout"> #}
+      </form>
+    {% endif %}
+    {% endblock %}
+  </header>
+  <main>
+    {% block content %}{% endblock %}
+  </main>
+  <footer id="footer">
+    {% block footer %}
+    &copy; Copyright 2023 by Elwin Jukema.
+    {% endblock %}
+  </footer>
+
+  <!-- Bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
