setup header, main, footer

--- a/app/View/base.html
+++ b/app/View/base.html
@@ -33,9 +33,7 @@
     {% block content %}{% endblock %}
   </main>
   <footer id="footer">
-    {% block footer %}
-    &copy; Copyright 2023 by Elwin Jukema.
-    {% endblock %}
+    <span>&copy; Copyright 2023 by Elwin Jukema</span>
   </footer>
 
   <!-- Bootstrap -->
