--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-/* *,
+*,
 *:before,
 *:after {
   box-sizing: border-box;
@@ -15,10 +15,34 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
-
+  
   display: flex;
   flex-direction: column;
-} */
+}
+
+footer,
+header {
+  flex: none;
+}
+
+main {
+  flex: auto;
+}
+
+#footer {
+  padding: 0.8rem 0;
+
+  display: flex;
+  justify-content: center;
+}
+
+#footer span {
+  color: #888;
+}
+
+/************************************/
+/* REUSABLES */
+/************************************/
 
 .btn {
   border: none;
@@ -36,11 +60,15 @@ h2 {
   font-weight: 700;
 }
 
+/************************************/
+/* LOGIN */
+/************************************/
+
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
 }
 
 .form-login {
