--- a/app/View/base.html
+++ b/app/View/base.html
@@ -20,6 +20,7 @@
 
     
     {% if loggedIn == true %}
+      <button onclick="event.preventDefault(); logout()">Logout</button>
       <a href="" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
         Logout
       </a>
@@ -36,6 +37,8 @@
     <span>&copy; Copyright 2023 by Elwin Jukema</span>
   </footer>
 
+
+  <script src="./assets/js/script.js"></script>
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
