--- a/app/View/login.html
+++ b/app/View/login.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="login">
     <h1>EventStack</h1>
-    <form class="form-login" method="post" accept-charset="UTF-8">
+    <form id="form-login" class="form-login" method="post" onsubmit="event.preventDefault(); return login();" accept-charset="UTF-8">
       <h2>Login</h2>
       
       {# {% if error is defined %}
@@ -20,8 +20,6 @@
         {{ forms.input("password", "", "Password", "password") }}
         {{ forms.submit('Login') }}
       </div>
-    
-    
     </form>
   </div>
 {% endblock %}
