--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,10 +12,16 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
   
+  display: flex;
+}
+
+#content {
+  flex: 1;
+  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
 }
@@ -38,6 +44,10 @@ main {
 
 #footer span {
   color: #888;
+}
+
+#side-menu {
+
 }
 
 /************************************/
