--- a/app/View/home.html
+++ b/app/View/home.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Dashboard{% endblock %}
+
+{% block headerTitle %}Dashboard{% endblock %}
 
 {% block content %}
-  <h1>Homepagina</h1>
+  <p>content</p>
   
 {% endblock %}
