--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,6 +34,8 @@ body {
   flex: 1;
   min-height: 100vh;
 
+  background-color: #f1f1f1;
+
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
@@ -127,6 +129,15 @@ h2 {
 
 h2 {
   font-weight: 700;
+}
+
+/* CARDS */
+
+.card-event {
+  background-color: #fff;
+
+  padding: 1.25rem 0.75rem;
+  border-radius: 0.25rem;
 }
 
 /************************************/
