--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,15 @@
   --primary-700: #2E438F;
   --primary-800: #1F2D5F;
   --primary-900: #0F1630;
+  --gray-100: #F2F2F2;
+  --gray-200: #E6E6E6;
+  --gray-300: #D9D9D9;
+  --gray-400: #CCCCCC;
+  --gray-500: #BFBFBF;
+  --gray-600: #999999;
+  --gray-700: #737373;
+  --gray-800: #4D4D4D;
+  --gray-900: #262626;
 }
 
 *,
@@ -100,6 +109,12 @@ header {
 /************************************/
 /* REUSABLES */
 /************************************/
+ 
+a,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
 
 button {
   cursor: pointer;
@@ -124,20 +139,32 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
+  font-weight: 700;
 }
 
-h2 {
+h3 {
   font-weight: 700;
+  font-size: 1.5rem;
 }
 
 /* CARDS */
 
-.card-event {
-  background-color: #fff;
+.card {
+  border: none;
 
+  box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.1);
+}
+
+.card-event {
   padding: 1.25rem 0.75rem;
-  border-radius: 0.25rem;
+}
+
+.card-event-date {
+  color: var(--gray-600);
+}
+
+.card-event-title {
+  color: var(--primary-700);
 }
 
 /************************************/
@@ -165,4 +192,28 @@ h2 {
   max-width: 24rem;
   width: 100%;
 
+}
+
+/************************************/
+/* EVENTS */
+/************************************/
+
+.list-events {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 0.75rem;
+}
+
+/************************************/
+/* BREAKPOINTS */
+/************************************/
+
+@media only screen and (min-width: 768px) {
+  .list-events {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  
 }
