--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -167,6 +167,14 @@ h3 {
   color: var(--primary-700);
 }
 
+/* Forms */
+
+.form-cols-2 {
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 0.25rem;
+}
+
 /************************************/
 /* LOGIN */
 /************************************/
@@ -198,10 +206,28 @@ h3 {
 /* EVENTS */
 /************************************/
 
+#events-page {
+  display: flex;
+  column-gap: 0.6rem;
+}
+
+#events-content {
+  flex-grow: 1;
+}
+
 .list-events {
   display: grid;
   grid-template-columns: auto;
   gap: 0.75rem;
+}
+
+#events-form {
+  width: 20rem;
+  padding: 0.5rem;
+}
+
+.events-form-title {
+  padding: 0.5rem;
 }
 
 /************************************/
