--- a/app/View/login.html
+++ b/app/View/login.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="login">
     <h1>EventStack</h1>
-    <form id="form-login" class="form-login" method="post" onsubmit="event.preventDefault(); return login();" accept-charset="UTF-8">
+    <form id="form-login" class="form-login card" method="post" onsubmit="event.preventDefault(); return login();" accept-charset="UTF-8">
       <h2>Login</h2>
       
       {# {% if error is defined %}
