certain fields required event creation form

--- a/app/View/events.html
+++ b/app/View/events.html
@@ -49,12 +49,12 @@
       <form id="form-event" class="form-event" method="post" @submit.prevent="createEvent" accept-charset="UTF-8">
         {{ form.input("name", {label: "Name", placeholder:"Name", required: true}) }}
         {{ form.textarea("description", {label: "Description", placeholder:"Type your event description here..."}) }}
-        {{ form.input("date", {label: "Date", type: "date"}) }}
+        {{ form.input("date", {label: "Date", type: "date", required: true}) }}
         <div class="form-cols-2">
           {{ form.input("start-time", {label: "Start time", placeholder:"Start time"}) }}
           {{ form.input("end-time", {label: "End time", placeholder:"End time"}) }}
         </div>
-        {{ form.input("location", {label: "Location", placeholder:"Location"}) }}
+        {{ form.input("location", {label: "Location", placeholder:"Location", required: true}) }}
         {{ form.input("file", {label: "File", type: "file"}) }}
         {{ form.submit('Create') }}
       </form>
