fixed bugs on event creation

--- a/app/View/events.html
+++ b/app/View/events.html
@@ -51,8 +51,8 @@
         {{ form.textarea("description", {label: "Description", placeholder:"Type your event description here..."}) }}
         {{ form.input("date", {label: "Date", type: "date", required: true}) }}
         <div class="form-cols-2">
-          {{ form.input("start-time", {label: "Start time", placeholder:"Start time"}) }}
-          {{ form.input("end-time", {label: "End time", placeholder:"End time"}) }}
+          {{ form.input("startTime", {label: "Start time", placeholder:"Start time"}) }}
+          {{ form.input("endTime", {label: "End time", placeholder:"End time"}) }}
         </div>
         {{ form.input("location", {label: "Location", placeholder:"Location", required: true}) }}
         {{ form.input("file", {label: "File", type: "file"}) }}
