--- a/app/View/base.html
+++ b/app/View/base.html
@@ -11,7 +11,7 @@
   <!-- AlpineJS -->
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-  <link type="text/css" rel="stylesheet" href="./assets/css/style.css"/>
+  <link type="text/css" rel="stylesheet" href="{{ 'css/style.css'|asset }}"/>
 
   <title>{% block title %}{% endblock %}</title>
   {% endblock %}
@@ -55,7 +55,7 @@
   </div>
 
 
-  <script src="./assets/js/script.js"></script>
+  <script src="{{ 'js/script.js'|asset }}"></script>
 
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
