--- a/app/View/components/forms.html
+++ b/app/View/components/forms.html
@@ -3,14 +3,26 @@
     {% if options.label != null %}
       <label for="{{ name }}"> {{ options.label }}</label>
     {% endif %}
-    <input {% if options.required == true %}required{% endif %} placeholder="{{ options.placeholder }}" type="{{ options.type }}" class="form-control" id="{{ name }}" name="{{ name }}">
+    <input 
+      {% if options.required == true %}required{% endif %} 
+      placeholder="{{ options.placeholder }}" 
+      type="{{ options.type }}" 
+      class="form-control" 
+      id="{{ name }}" 
+      name="{{ name }}"
+      value="{{options.value}}">
   </div>
 {% endmacro %}
 
 {% macro textarea(name, options=[]) %}
   <div class="form-group {{ options.classes }}">
     <label for="{{ name }}"> {{ options.label }}</label>
-    <textarea type="text" class="form-control" id="{{ name }}" name="{{ name }}" placeholder="{{options.placeholder}}"></textarea>
+    <textarea 
+      type="text" 
+      class="form-control" 
+      id="{{ name }}" 
+      name="{{ name }}" 
+      placeholder="{{options.placeholder}}">{{options.value}}</textarea>
   </div>
 {% endmacro %}
 
