--- a/app/View/event.html
+++ b/app/View/event.html
@@ -2,10 +2,11 @@
 
 {% import "components/cards.html" as card %}
 {% import "components/forms.html" as form %}
+{% import "components/misc.html" as misc %}
 
-{% block title %}{{event.name}}{% endblock %}
+{% block title %}Event - {{event.name}}{% endblock %}
 
-{% block headerTitle %}{{event.name}}{% endblock %}
+{% block headerTitle %}Event detailpage{% endblock %}
 {% block header %}
   <button class="btn btn-primary" @click="open = !open">Edit Event</button>
 {% endblock %}
@@ -17,8 +18,15 @@
     <!-- Content -->
     <div id="events-content">
       <div class="card card-event-detail">
-        <span class="card-event-date">{{event.date|date('d/m/Y')}} {{event.startTime}}</span>
-        <p class="card-event-description">{{event.description}}</p>
+        <!-- <span class="card-event-date">{{event.date|date('d/m/Y')}} {{event.startTime}}</span> -->
+        {{ misc.keyValue("Name", event.name)}}
+        {{ misc.keyValue("Description", event.description)}}
+        {{ misc.keyValue("Date", event.date|date('d/m/Y'))}}
+        <div class="form-cols-2">
+          {{ misc.keyValue("Start time", event.startTime)}}
+          {{ misc.keyValue("End time", event.endTime)}}
+        </div>
+        {{ misc.keyValue("Location", event.location)}}
       </div>
     </div>
 
