--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -152,6 +152,10 @@ h3 {
   font-size: 1.5rem;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
 /* CARDS */
 
 .card {
@@ -262,6 +266,23 @@ h3 {
 
 .card-event-detail {
   padding: 0.5rem;
+}
+
+/************************************/
+/* USERS */
+/************************************/
+
+.list-users {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.6rem;
+}
+
+.card-user {
+  padding: 0.5rem;
+
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 /************************************/
